modify border and bullet styling

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -6,6 +6,7 @@ h2 + p {
     color: red;
 }
 
-ul[class="list"] > li {
+.list > li {
     border-bottom: 1px grey solid;
+    list-style-type: none;
 }
