--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,3 +1,4 @@
+/* /* Activity 1:
 div h2 {
     font-style: italic;
 }
@@ -9,4 +10,23 @@ h2 + p {
 .list > li {
     border-bottom: 1px grey solid;
     list-style-type: none;
+} */
+
+ul  a:link{
+    color: green;
 }
+
+ul a:visited{
+    color: red;
+}
+
+ul a:hover {
+    color: pink;
+}
+
+li:first-child::first-letter {
+    font-style: bold;
+    font-size: 120%;
+}
+
+
