--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -36,10 +36,27 @@ a[title~="BCIT"] {
 
  */
 
+ /* Activity 3:
 img {
     float: left;
 }
 
 .below {
     clear: left;
+} */
+
+.target {
+    width: 50px;
+    height: 50px;
+    background-color: forestgreen;
+    position: absolute; 
+    top: 0px;
+    right: 0px;
+
 }
+
+.container {
+    border: 2px gray solid;
+    position: relative;
+}
+
